<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.dylanrodbar.cointransformer.MainActivity">

    <ImageView
        android:id="@+id/imageMenu"
        android:layout_width="339dp"
        android:layout_height="0dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="spread_inside"
        app:srcCompat="@drawable/principal" />

    <TextView
        android:id="@+id/textMenu1"
        android:layout_width="331dp"
        android:layout_height="87dp"
        android:layout_marginRight="16dp"
        android:layout_marginStart="8dp"
        android:text="@string/menuString"
        android:textColor="@android:color/background_dark"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/imageMenu"
        app:layout_constraintHorizontal_bias="0.222"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="@+id/imageMenu"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/buttonMenu1"
        android:layout_width="115dp"
        android:layout_height="0dp"
        android:adjustViewBounds="true"
        android:background="@android:color/background_light"
        android:backgroundTint="@android:color/transparent"
        android:onClick="buttonTransformerClicked"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="@+id/buttonMenu2"
        app:layout_constraintHorizontal_bias="0.189"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/buttonMenu2"
        app:srcCompat="@drawable/opcion1" />

    <TextView
        android:id="@+id/textMenu2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/op1_menu"
        android:textColor="@android:color/background_dark"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/buttonMenu1"
        app:layout_constraintStart_toStartOf="@+id/buttonMenu1"
        app:layout_constraintTop_toBottomOf="@+id/buttonMenu1" />

    <ImageButton
        android:id="@+id/buttonMenu2"
        android:layout_width="115dp"
        android:layout_height="114dp"
        android:layout_marginBottom="56dp"
        android:layout_marginRight="44dp"
        android:adjustViewBounds="true"
        android:background="@android:color/background_light"
        android:backgroundTint="@android:color/transparent"
        android:onClick="buttonHistoricalClicked"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:srcCompat="@drawable/opcion2" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/op2_menu"
        android:textColor="@android:color/background_dark"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonMenu2" />

</android.support.constraint.ConstraintLayout>
